fixed weird break on mobile - in css

--- a/site/assets/styles/styles.css
+++ b/site/assets/styles/styles.css
@@ -571,6 +571,7 @@ a {
     }
     .activity-content {
         column-gap: normal;
+        grid-template-columns: none;
     }
     
     .activity-content .content{
